js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-arrow-function-return-await-nested-imports.js
(
async
(
)
=
>
await
import
(
import
(
import
(
'
.
/
empty_FIXTURE
.
js
'
)
)
)
)
;
reportCompare
(
0
0
)
;
