js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/top-level-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
